# mia-fl

./: .gitignore  README.md  agents.md  analyze_results.py  check_ray_sync.py  debug_data_loading.py  plot_results.py  pyproject.toml  ray_utils.py  reproduce_issue.py  simulate_results.py  temp_log.txt  test_fix.py  verify_fix.py  verify_geometry_fix.py
figs/: README.md
src/: __init__.py  simulator.py
src/data/: datasets.py  partitions.py
src/models/: __init__.py  vae.py
src/tasks/: simulation_tasks.py
tex/mdpi_bdcc/: attrib.sty  compile_report.sh  cover_letter.txt  refs.bib  report.tex
tex/sin_maquetar/: compile_report.sh  refs.bib  report.tex
theory_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
