[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theory-simulation"
version = "1.0.0"
description = "Theory Simulation for FL Privacy Analysis"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0,<2.4",
    "medmnist>=2.2.0",
    "matplotlib>=3.5.0",
    "ray[default]>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
